閉じるボタンを消し、口コミ削除cssを修正

--- a/static/css/list_of_review.css
+++ b/static/css/list_of_review.css
@@ -71,3 +71,9 @@ a.btn--orange {
   height: 100%;
   font-size: 12px;
 }
+
+.body .table1 tr td {
+  font-size: large;
+  font-weight: bold;
+  border: none;
+}
