--- a/templates/list_of_review.html
+++ b/templates/list_of_review.html
@@ -75,6 +75,7 @@
       <div class="body">
         <br />
         <table
+          class="table1"
           style="
             border-bottom: 1px solid #707070;
             width: 100%;
@@ -82,46 +83,10 @@
           "
         >
           <tr>
-            <td
-              style="
-                width: 10%;
-                font-size: large;
-                font-weight: bold;
-                border: none;
-              "
-            >
-              　音源名
-            </td>
-            <td
-              style="
-                width: 10%;
-                font-size: large;
-                font-weight: bold;
-                border: none;
-              "
-            >
-              投稿日時
-            </td>
-            <td
-              style="
-                width: 7%;
-                font-size: large;
-                font-weight: bold;
-                border: none;
-              "
-            >
-              評価
-            </td>
-            <td
-              style="
-                width: 63%;
-                font-size: large;
-                font-weight: bold;
-                border: none;
-              "
-            >
-              　口コミ
-            </td>
+            <td style="width: 10%">　音源名</td>
+            <td style="width: 10%">投稿日時</td>
+            <td style="width: 7%">評価</td>
+            <td style="width: 63%">　口コミ</td>
           </tr>
         </table>
         <br />
