--- a/templates/admin_edit.html
+++ b/templates/admin_edit.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% block css %}
     <link rel="stylesheet" href="{{url_for('static', filename='/css/route.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='/css/route_edit.css')}}">
     <title>MusicReef</title>
     {% endblock %}
     </head>
@@ -66,18 +67,17 @@
           </div>
         <div class="body">
             <h3 class="title">アカウント編集</h3>
-            <form action="{{url_for('admin_edit_exe')}}" method="post">
-                <input type="text" placeholder="名前" name="name">
-                <button type="submit">変更</button>     
+            <form action="{{url_for('admin_edit_exe')}}" method="post"> 
+              <input class="nameInput" type="text" placeholder="名前" name="name">
+              <button class="nameSubmit" type="submit">変更</button>     
             </form>
-            <form action="{{url_for('admin_edit_exe')}}" method="post">
-                <input type="text" placeholder="現在のパスワード" name="password">
-                <input type="text" placeholder="新しいパスワード"name="newPassword">
-                <input type="text" placeholder="新しいパスワード（確認）" name="Checkpassword">
-                <button type="submit">変更</button> 
+            <form action="{{url_for('admin_edit_exe')}}" method="post">  
+              <input class="nowPass" type="text" placeholder="現在のパスワード" name="password">
+              <input class="changePass" type="text" placeholder="新しいパスワード"name="newPassword">
+              <input class="checkPass" type="text" placeholder="新しいパスワード（確認）" name="Checkpassword">
+              <button class="passSubmit" type="submit">変更</button> 
             </form>
         </div>
     </div>
-    
   </body>
 </html>
