アカウント編集画面にパスワード変更機能を設けました

--- a/templates/admin_edit.html
+++ b/templates/admin_edit.html
@@ -72,9 +72,9 @@
               <button class="nameSubmit" type="submit">変更</button>     
             </form>
             <form action="{{url_for('admin_edit_exe')}}" method="post">  
-              <input class="nowPass" type="text" placeholder="現在のパスワード" name="password">
-              <input class="changePass" type="text" placeholder="新しいパスワード"name="newPassword">
-              <input class="checkPass" type="text" placeholder="新しいパスワード（確認）" name="Checkpassword">
+              <input class="nowPass" type="password" placeholder="現在のパスワード" name="password">
+              <input class="changePass" type="password" placeholder="新しいパスワード"name="newPassword">
+              <input class="checkPass" type="password" placeholder="新しいパスワード（確認）" name="Checkpassword">
               <button class="passSubmit" type="submit">変更</button> 
             </form>
         </div>
