検索機能の追加

--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,7 @@
                 <option value="11">Chill Hop</option>
             </select>      
             
-              <input type="text" placeholder="検索ワード" name="name">
+              <input type="text" class="tagInput" placeholder="検索ワード" name="name">
                   <button type="submit">
                     <i class="fas fa-search fa-fw"></i>
                   </button>      
