--- a/templates/music_register.html
+++ b/templates/music_register.html
@@ -75,6 +75,7 @@
       </div>
       <div class="body">
         <h2 style="margin-left: 50px">音源の登録</h2>
+        <a href="{{url_for('tag')}}" style=" position: absolute;top: 115px;left:390px;">タグ登録</a>
         <div style="margin-left: 40px">
           <form action="{{url_for('music_regi_exe')}}" method="post">
             名前<input
