--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -114,13 +114,16 @@
           <option value=”item5”>項目5</option>
       </select>
       <h3 class="title3">音源時間</h3>
-      <select class="time" name=”item”>
-          <option value=”item1”>項目1</option>
-          <option value=”item2”>項目2</option>
-          <option value=”item3”>項目3</option>
-          <option value=”item4”>項目4</option>
-          <option value=”item5”>項目5</option>
-      </select>
+        <select class="music-length" name="length">
+          <option value="0">指定しない</option>
+          <option value="1">~0:59</option>
+          <option value="2">1:00~1:59</option>
+          <option value="3">2:00~2:59</option>
+          <option value="4">3:00~3:59</option>
+          <option value="5">4:00~4:59</option>
+          <option value="6">5:00~5:59</option>
+          <option value="7">6:00~</option>
+        </select>
       <h3 class="title4">サイト</h3>
       <select class="site" name=”item”>
           <option value=”item1”>項目1</option>
