--- a/static/css/login.css
+++ b/static/css/login.css
@@ -7,15 +7,28 @@
   width: 100%;
 }
 .container h1 {
+  position: absolute;
+  top: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
   text-align: center;
   color: #044f88;
   margin: 0;
 }
 
 .container1 {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
   font-family: arial;
   font-size: 50px;
   width: 50%;
+  height: 12%;
   background-color: #548eba;
   margin-left: auto;
   margin-right: auto;
@@ -30,12 +43,19 @@
 }
 
 .container2 {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
   font-family: arial;
   font-size: 20px;
   border-bottom: 1px solid;
   border-right: 1px solid;
   border-left: 1px solid;
   width: 50%;
+  height: 45%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -66,4 +86,20 @@ a.btn--orange {
 a.btn--radius {
   /*ボタンの丸み*/
   border-radius: 100vh;
+}
+
+button{
+  width: 130px;
+  height: 50px;
+  background-color: #246ba0;
+  color: white;
+  font-size: 20px;
+}
+.passtext{
+  position: absolute;
+  top: 75%;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
 }
