--- a/templates/route_admin_list.html
+++ b/templates/route_admin_list.html
@@ -82,7 +82,7 @@
           <!-- 管理者の表示部分 -->
             <tr>
               <td colspan="3"style="width: 45px; height: 45px">{{admin[1]}}</td>
-              <td style="width: 45px; background-color: #DEDEDE"><button class="js-admin-delete-modal-button" data-admin="{{ admin[0] }}">×</button></td>
+              <td style="width: 45px; background-color: #DEDEDE"><button class="js-admin-delete-modal-button" data-admin="{{ admin[0] }}">削除</button></td>
             </tr>
             <tr>
               <td colspan="1" style="border: none">mail:</td>
@@ -90,7 +90,7 @@
             </tr>
             <tr>
               <td style="border: none;"><button class="" >ログ</button></td>
-              <td style="border: none;"><button class="" >凍結</button></td>
+              <td style="border: none;"><button class="admin-freeze-button" data-freezAdmin="{{ admin[0] }}">凍結</button></td>
             </tr>
           </table>
         {% endfor%}
@@ -110,19 +110,31 @@
           <form action="{{url_for('admin_delete_exe')}}" method="post">
             <input  class="delete-admin-id" type='hidden' name="id" value="">
           <button>削除</button>
+          </form>
         </div> 
       </div>
     </div>
+
     <!--凍結のモーダル-->
-    <div class="layer detail-modal">
+    <div class="layer admin-freeze-modal">
       <div class="modal-header">
-        <button class="msg-box msg-position js-detail-close-button">×</button>
+        <button class="msg-box msg-position js-freeze-close-button">×</button>
         <div class="modal-body">
           
         </div> 
       </div>
-    </div>      
-    
+    </div>  
+
+    <!--凍結解除のモーダル-->
+    <div class="layer admin-freeze-Cancellation-modal">
+      <div class="modal-header">
+        <button class="msg-box msg-position js-freeze-Cancellation-close-button">×</button>
+        <div class="modal-body">
+         
+        </div> 
+      </div>
+    </div>
+
     <script type="text/javascript" src="{{ url_for('static', filename='/js/admin_list.js') }}"></script>
 </body>
 
