口コミ一覧（ここから削除ボタンを付ける）

--- a/static/css/modal.css
+++ b/static/css/modal.css
@@ -77,3 +77,18 @@
   font-size: 15px;
 }
 /*----------------------------------------------*/
+/*口コミのcss------------------------------------*/
+#reviewList {
+  top: 50px;
+  width: 700px;
+  height: 350px;
+  background-color: rgb(255, 255, 255);
+  color: rgb(94, 94, 94);
+}
+
+#reviewList p {
+  left: 15%;
+  top: 60px;
+  font-size: 15px;
+}
+/*----------------------------------------------*/
