環境の構築

--- a/templates/index.html
+++ b/templates/index.html
@@ -95,12 +95,11 @@
         <div class="example" style="padding: 5px; margin-left: 10px">
         </div>
         <h3 class="title2">並び替え</h3>
-        <select class="sort" name=”item”>
-            <option value=”item1”>新しい順</option>
-            <option value=”item2”>古い順</option>
-            <option value=”item3”>項目3</option>
-            <option value=”item4”>項目4</option>
-            <option value=”item5”>項目5</option>
+        <select class="sort" name="sort">
+            <option value="new">新しい順</option>
+            <option value="old">古い順</option>
+            <option value="access">アクセス回数</option>
+            <option value="review">評価が高い</option>
         </select>
         <h3 class="title3">音源時間</h3>
         <select class="music-length" name="length">
@@ -114,12 +113,12 @@
           <option value="7">6:00~</option>
         </select>
         <h3 class="title4">サイト</h3>
-        <select class="site" name=”item”>
-            <option value=”item1”>項目1</option>
-            <option value=”item2”>項目2</option>
-            <option value=”item3”>項目3</option>
-            <option value=”item4”>項目4</option>
-            <option value=”item5”>項目5</option>
+        <select class="site" name="site">
+            <option value="none">指定しない</option>
+            <option value="">項目2</option>
+            <option value="">項目3</option>
+            <option value="">項目4</option>
+            <option value="">項目5</option>
         </select>
         <div class="example" style="padding: 5px;">
           <div class="page "style="display: none;">
