細かい修正

--- a/templates/music_edit.html
+++ b/templates/music_edit.html
@@ -137,11 +137,11 @@
               value="{{music.source}}"
               style="margin-bottom: 10px; margin-left: 35px"
             >
-              <option value="1">A</option>
-              <option value="2">B</option>
-              <option value="3">C</option>
-              <option value="4">D</option>
-              <option value="5">サイト名</option>
+              <option value="1">DOVA</option>
+              <option value="2">BGMer</option>
+              <option value="3">甘茶の音楽工房</option>
+              <option value="4">MusMus</option>
+              <option value="5">SHW</option>
               <br /></select
             ><br />
             URL<input
