--- a/templates/route_admin_list.html
+++ b/templates/route_admin_list.html
@@ -78,7 +78,7 @@
       <a class="route_register" href="register">管理者の新規登録</a>
       <div class="adminList">
         {% for  admin in admins %}
-          <table border="1px">
+          <table style="float: left;" border="1px">
           <!-- 管理者の表示部分 -->
             <tr>
               <td colspan="3"style="width: 45px; height: 45px">{{admin[1]}}</td>
